--- a/scripts/lib/install
+++ b/scripts/lib/install
@@ -549,4 +549,42 @@ su zulip -c '/home/zulip/deployments/current/scripts/setup/initialize-database -
 
 su zulip -c '/home/zulip/deployments/current/manage.py generate_realm_creation_link'
 
-/bin/bash ./post-install.sh -POSTGRESQL_VERSION=$POSTGRESQL_VERSION -OS_ID=$os_id -OS_VERSION=$os_version_id
+
+DATA_DIR=/opt/zimbra/data/zulip
+POSTGRESQL_DIR=$DATA_DIR/postgresql
+RABBITMQ_DIR=$DATA_DIR/rabbitmq
+POSTGRESQL_DATA_DIR=$POSTGRES_DIR/13/data
+RABBITMQ_CONF_PATH=/etc/rabbitmq/rabbitmq-env.conf
+POSTGRESQL_CONF_PATH=/etc/postgresql/$POSTGRESQL_VERSION/main/postgresql.conf
+
+
+if [ ! -d "$DATA_DIR" ]; then
+    echo "Create directory $DATA_DIR"
+    mkdir -p "$DATA_DIR"
+fi
+
+if [ ! -d "$POSTGRESQL_DIR" ]; then
+    echo "Create directory $POSTGRESQL_DIR"
+    mkdir -p "$POSTGRESQL_DIR"
+fi
+
+if [ ! -d "$RABBITMQ_DIR" ]; then
+    echo "Create directory $RABBITMQ_DIR"
+    mkdir -p "$RABBITMQ_DIR"
+fi
+
+
+# change postgres data path 
+echo "Update postgress data dir to $POSTGRESQL_DIR"
+sed -zi 's/data_directory =[^\n]*/data_directory = \/opt\/zimbra\/data\/zulip\/postgresql\/13\/data/g' $POSTGRESQL_CONF_PATH
+chown postgres:postgres $POSTGRESQL_DATA_DIR
+systemctl stop postgresql
+rsync -av /var/lib/postgresql/$POSTGRESQL_VERSION $POSTGRESQL_DIR
+systemctl start postgresql
+
+# change rabbitmq data path
+echo "Update rabbitmq data dir to $RABBITMQ_DIR"
+systemctl stop rabbitmq-server
+sed -zi '/RABBITMQ_MNESIA_BASE=\/rabbitmq/!s/$/\nRABBITMQ_MNESIA_BASE=\/opt\/zimbra\/data\/zulip\/rabbitmq\n/' $RABBITMQ_CONF_PATH
+chown rabbitmq:rabbitmq $RABBITMQ_DIR
+systemctl start rabbitmq-server
