--- a/scripts/lib/install
+++ b/scripts/lib/install
@@ -507,7 +507,7 @@ fi
 DATA_DIR=/opt/zimbra/data/zulip
 POSTGRESQL_DIR=$DATA_DIR/postgresql
 RABBITMQ_DIR=$DATA_DIR/rabbitmq
-POSTGRESQL_DATA_DIR=$POSTGRESQL_DIR/$POSTGRESQL_VERSION/data
+POSTGRESQL_DATA_DIR=$POSTGRESQL_DIR/$POSTGRESQL_VERSION/main
 RABBITMQ_CONF_PATH=/etc/rabbitmq/rabbitmq-env.conf
 POSTGRESQL_CONF_PATH=/etc/postgresql/$POSTGRESQL_VERSION/main/postgresql.conf
 
@@ -530,7 +530,7 @@ fi
 
 # change postgres data path 
 echo "Update postgress data dir to $POSTGRESQL_DATA_DIR"
-sed -zi 's/data_directory =[^\n]*/data_directory = \/opt\/zimbra\/data\/zulip\/postgresql\/13\/data/g' $POSTGRESQL_CONF_PATH
+sed -zi 's/data_directory =[^\n]*/data_directory = \x27\/opt\/zimbra\/data\/zulip\/postgresql\/13\/main\x27/g' $POSTGRESQL_CONF_PATH
 systemctl stop postgresql
 chown postgres:postgres $POSTGRESQL_DATA_DIR
 rsync -av /var/lib/postgresql/$POSTGRESQL_VERSION $POSTGRESQL_DIR
@@ -588,5 +588,3 @@ fi
 su zulip -c '/home/zulip/deployments/current/scripts/setup/initialize-database --quiet'
 
 su zulip -c '/home/zulip/deployments/current/manage.py generate_realm_creation_link'
-
-
