sed command changes

--- a/scripts/lib/install
+++ b/scripts/lib/install
@@ -531,17 +531,17 @@ ln -nsf $ZIMBRA_ZULIP_UPLOAD_DIR $ZULIP_UPLOAD_DIR
 
 # change postgres data path 
 echo "Update postgress data dir to $POSTGRESQL_DATA_DIR"
-grep -q "^data_directory[[:blank:]]*=*[[:blank:]]*"  $POSTGRESQL_CONF_PATH && sed "s/^data_directory[[:blank:]]*=*[[:blank:]]*.*/data_directory = \x27\/opt\/zimbra\/data\/zulip\/postgresql\/13\/main\x27" -i $POSTGRESQL_CONF_PATH ||  sed "$ a\data_directory = \x27\/opt\/zimbra\/data\/zulip\/postgresql\/13\/main\x27" -i $POSTGRESQL_CONF_PATH
+sudo grep -q "^data_directory[[:blank:]]*=*[[:blank:]]*"  $POSTGRESQL_CONF_PATH && sudo sed "s|^data_directory[[:blank:]]*=*[[:blank:]]*.*|data_directory = \x27$POSTGRESQL_DATA_DIR\x27|" -i $POSTGRESQL_CONF_PATH ||  sudo sed "$ a|data_directory = \x27$POSTGRESQL_DATA_DIR\x27|" -i $POSTGRESQL_CONF_PATH
 
 systemctl stop postgresql
-chown postgres:postgres $POSTGRESQL_DATA_DIR
+chown -R postgres:postgres $POSTGRESQL_DIR
 rsync -av /var/lib/postgresql/$POSTGRESQL_VERSION $POSTGRESQL_DIR
 systemctl start postgresql
 
 # change rabbitmq data path
 echo "Update rabbitmq data dir to $RABBITMQ_DIR"
 systemctl stop rabbitmq-server
-sudo grep -q "^RABBITMQ_MNESIA_BASE[[:blank:]]*=*[[:blank:]]*"  $RABBITMQ_CONF_PATH && sudo sed "s/^RABBITMQ_MNESIA_BASE[[:blank:]]*=*[[:blank:]]*.*/RABBITMQ_MNESIA_BASE = \/opt\/zimbra\/data\/zulip\/rabbitmq/" -i $RABBITMQ_CONF_PATH ||  sudo  sed "$ a\RABBITMQ_MNESIA_BASE = \/opt\/zimbra\/data\/zulip\/rabbitmq" -i $RABBITMQ_CONF_PATH
+sudo grep -q "^RABBITMQ_MNESIA_BASE[[:blank:]]*=*[[:blank:]]*"  $RABBITMQ_CONF_PATH && sudo sed "s|^RABBITMQ_MNESIA_BASE=.*/RABBITMQ_MNESIA_BASE=$RABBITMQ_DIR" -i |$RABBITMQ_CONF_PATH| ||  sudo  sed "$ a|RABBITMQ_MNESIA_BASE=$RABBITMQ_DIR|" -i $RABBITMQ_CONF_PATH
 
 chown rabbitmq:rabbitmq $RABBITMQ_DIR
 systemctl start rabbitmq-server
@@ -555,7 +555,7 @@ if [ ! -z $LDAP_SERVER ]; then
 
 fi
 
-
+q
 if has_class "zulip::profile::rabbitmq"; then
     if ! rabbitmqctl status >/dev/null; then
         set +x
