--- a/scripts/lib/install
+++ b/scripts/lib/install
@@ -171,13 +171,16 @@ elif [ "$LDAP_PROTOCOL"  == "" ] || [ "$LDAP_PROTOCOL"  != "ldap" ]; then
     LDAP_PROTOCOL='ldap'
 fi
 
-while true; do
-    echo -n "Please enter LDAP hostname: "
-    read LDAP_SERVER
-    if [[ "$LDAP_SERVER"  != "" ]]; then
-        break
-    fi
-done
+
+if [[ "$LDAP_SERVER"  == "" ]]; then
+    while true; do
+        echo -n "Please enter LDAP hostname: "
+        read LDAP_SERVER
+        if [[ "$LDAP_SERVER"  != "" ]]; then
+            break
+        fi
+    done
+fi
 
 echo -n "Please enter LDAP port (default - 389): "
 read LDAP_SERVER_PORT
@@ -251,11 +254,6 @@ set -x
 
 ZULIP_PATH="$(readlink -f "$(dirname "$0")"/../..)"
 
-# Force a known locale.  Some packages on PyPI fail to install in some locales.
-export LC_ALL="C.UTF-8"
-export LANG="C.UTF-8"
-export LANGUAGE="C.UTF-8"
-
 # Force a known path; this fixes problems on Debian where `su` from
 # non-root may not adjust `$PATH` to root's.
 export PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
@@ -283,7 +281,7 @@ if [ -f /etc/os-release ]; then
 fi
 
 case "$os_id$os_version_id" in
-    debian10 | debian11 | ubuntu18.04 | ubuntu20.04) ;;
+    centos7 | debian10 | debian11 | ubuntu18.04 | ubuntu20.04) ;;
     *)
         set +x
         cat <<EOF
@@ -302,6 +300,23 @@ EOF
         exit 1
         ;;
 esac
+
+# Force a known locale.  Some packages on PyPI fail to install in some locales.
+if [ "$os_id" = centos ]; then
+    export LC_ALL="en_US.UTF-8"
+    export LANG="en_US.UTF-8"
+    export LANGUAGE="en_US.UTF-8"
+else
+    export LC_ALL="C.UTF-8"
+    export LANG="C.UTF-8"
+    export LANGUAGE="C.UTF-8"
+fi
+
+# Create certificate and put it to the right place
+if [ "$os_id" = centos ]; then
+    groupadd ssl-cert
+    chown root:ssl-cert /etc/pki/tls/private
+fi
 
 if [ "$os_id" = ubuntu ] && ! apt-cache policy \
     | grep -q "^     release v=$os_version_id,o=Ubuntu,a=$os_version_codename,n=$os_version_codename,l=Ubuntu,c=universe"; then
@@ -496,7 +511,7 @@ EOF
 
     # We only need the PostgreSQL version setting on database hosts; but
     # we don't know if this is a database host until we have the catalog summary.
-    if ! has_class "zulip::postgresql_common" || [ "$package_system" != apt ]; then
+    if ! has_class "zulip::postgresql_common"; then
         crudini --del /etc/zulip/zulip.conf postgresql
     fi
 
