Revert install file changes

--- a/scripts/lib/install
+++ b/scripts/lib/install
@@ -28,10 +28,6 @@ Options:
       install process; used when this command is run once in a highly-controlled
       environment to produce an image which is used elsewhere.  Uncommon.
 
-  --postgresql-database-name=zulip
-      Sets the PostgreSQL database name.
-  --postgresql-database-user=zulip
-      Sets the PostgreSQL database user.
   --postgresql-version=13
       Sets the version of PostgreSQL that will be installed.
   --postgresql-missing-dictionaries
@@ -51,7 +47,7 @@ EOF
 
 # Shell option parsing.  Over time, we'll want to move some of the
 # environment variables below into this self-documenting system.
-args="$(getopt -o '' --long help,hostname:,email:,certbot,self-signed-cert,cacert:,postgresql-database-name:,postgresql-database-user:,postgresql-version:,postgresql-missing-dictionaries,no-init-db,no-overwrite-settings,no-dist-upgrade -n "$0" -- "$@")"
+args="$(getopt -o '' --long help,hostname:,email:,certbot,self-signed-cert,cacert:,postgresql-version:,postgresql-missing-dictionaries,no-init-db,no-overwrite-settings,no-dist-upgrade -n "$0" -- "$@")"
 eval "set -- $args"
 while true; do
     case "$1" in
@@ -84,16 +80,7 @@ while true; do
             SELF_SIGNED_CERT=1
             shift
             ;;
-        --postgresql-database-name)
-            POSTGRESQL_DATABASE_NAME="$2"
-            shift
-            shift
-            ;;
-        --postgresql-database-user)
-            POSTGRESQL_DATABASE_USER="$2"
-            shift
-            shift
-            ;;
+
         --postgresql-version)
             POSTGRESQL_VERSION="$2"
             shift
@@ -220,8 +207,8 @@ case "$os_id$os_version_id" in
 Unsupported OS release: $os_id $os_version_id
 
 Zulip in production is supported only on:
- - Debian 10 "buster"
  - Debian 11 "bullseye" (beta)
+ - Debian 10 "buster"
  - Ubuntu 18.04 LTS "bionic"
  - Ubuntu 20.04 LTS "focal"
 
@@ -344,7 +331,7 @@ if [ "$package_system" = apt ]; then
     # `zulip::profile::base` such that the new dependency is seen by
     # upgrades, as well as new installs.
     if ! apt-get install -y \
-        python3 python3-yaml puppet git curl jq crudini \
+        python3 python3-yaml puppet git curl wget jq crudini \
         "${ADDITIONAL_PACKAGES[@]}"; then
         set +x
         echo -e '\033[0;31m' >&2
@@ -355,7 +342,7 @@ if [ "$package_system" = apt ]; then
     fi
 elif [ "$package_system" = yum ]; then
     if ! yum install -y \
-        python3 python3-pyyaml puppet git curl jq crudini \
+        python3 python3-pyyaml puppet git curl wget jq crudini \
         "${ADDITIONAL_PACKAGES[@]}"; then
         set +x
         echo -e '\033[0;31m' >&2
@@ -381,7 +368,6 @@ if [ "$VIRTUALENV_NEEDED" = "yes" ]; then
 fi
 
 "$ZULIP_PATH"/scripts/lib/install-node
-"$ZULIP_PATH"/scripts/lib/install-yarn
 
 # Generate /etc/zulip/zulip.conf .
 mkdir -p /etc/zulip
@@ -428,14 +414,6 @@ EOF
     # we don't know if this is a database host until we have the catalog summary.
     if ! has_class "zulip::postgresql_common" || [ "$package_system" != apt ]; then
         crudini --del /etc/zulip/zulip.conf postgresql
-    fi
-
-    if [ -n "$POSTGRESQL_DATABASE_NAME" ]; then
-        crudini --set /etc/zulip/zulip.conf postgresql database_name "$POSTGRESQL_DATABASE_NAME"
-    fi
-
-    if [ -n "$POSTGRESQL_DATABASE_USER" ]; then
-        crudini --set /etc/zulip/zulip.conf postgresql database_user "$POSTGRESQL_DATABASE_USER"
     fi
 
     # Note: there are four dpkg-query outputs to consider:
@@ -546,13 +524,11 @@ if has_class "zulip::app_frontend_base"; then
 fi
 
 # Set up a basic .gitconfig for the 'zulip' user
-if [ -n "$ZULIP_ADMINISTRATOR" ]; then
-    (
-        cd / # Make sure the current working directory is readable by zulip
-        su zulip -c "git config --global user.email $ZULIP_ADMINISTRATOR"
-        su zulip -c "git config --global user.name 'Zulip Server ($EXTERNAL_HOST)'"
-    )
-fi
+(
+    cd / # Make sure the current working directory is readable by zulip
+    su zulip -c "git config --global user.email $ZULIP_ADMINISTRATOR"
+    su zulip -c "git config --global user.name 'Zulip Server ($EXTERNAL_HOST)'"
+)
 
 if [ -n "$NO_INIT_DB" ]; then
     set +x
