--- a/zimbra/scripts/lib/install
+++ b/zimbra/scripts/lib/install
@@ -308,7 +308,7 @@ if [ "$os_id" = centos ]; then
     export LANGUAGE="en_US.UTF-8"
 
     # Create certificate and put it to the right place
-    openssl req -nodes -newkey rsa:2048 -keyout /etc/ssl/private/ssl-cert-snakeoil.key -out /etc/ssl/certs/ssl-cert-snakeoil.pem -subj "/C=IN/ST=MH/L=PN/O=Zulip/OU=Dev/CN=$EXTERNAL_HOST/emailAddress=$ZULIP_ADMINISTRATOR"
+    openssl req -nodes -newkey rsa:2048 -days 3650 -keyout /etc/ssl/private/ssl-cert-snakeoil.key -out /etc/ssl/certs/ssl-cert-snakeoil.pem -subj "/C=IN/ST=MH/L=PN/O=Zulip/OU=Dev/CN=$EXTERNAL_HOST/emailAddress=$ZULIP_ADMINISTRATOR"
     groupadd ssl-cert
     chown root:ssl-cert /etc/pki/tls/private
 else
