--- a/zimbra/scripts/lib/install
+++ b/zimbra/scripts/lib/install
@@ -310,7 +310,12 @@ if [ "$os_id" = centos ]; then
     # Create certificate and put it to the right place
     mkdir -p /etc/ssl/private
     openssl req -nodes -newkey rsa:2048 -days 3650 -keyout /etc/ssl/private/ssl-cert-snakeoil.key -out /etc/ssl/certs/ssl-cert-snakeoil.pem -subj "/C=IN/ST=MH/L=PN/O=Zulip/OU=Dev/CN=$EXTERNAL_HOST/emailAddress=$ZULIP_ADMINISTRATOR"
-    groupadd ssl-cert
+    if grep -q "ssl-cert" /etc/group
+     then
+        echo "ssl-cert group already exists"
+     else
+        groupadd ssl-cert
+    fi
     chown root:ssl-cert /etc/pki/tls/private
 else
     export LC_ALL="C.UTF-8"
