postgres check for centos

--- a/zimbra/scripts/lib/install
+++ b/zimbra/scripts/lib/install
@@ -599,15 +599,23 @@ if [ "$os_id" = ubuntu ]; then
 fi
 
 if [ "$os_id" = centos ]; then
-  rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-contrib-10.17-1PGDG.rhel7.x86_64
-  rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-libs-10.17-1PGDG.rhel7.x86_64
-  rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql-libs-9.2.24-7.el7_9.x86_64
-  rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-server-10.17-1PGDG.rhel7.x86_64
-  rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-10.17-1PGDG.rhel7.x86_64
-  chown -R postgres:postgres $POSTGRESQL_DIR
-  sudo grep -q "^data_directory[[:blank:]]*=*[[:blank:]]*"  $POSTGRESQL_CONF_PATH && sudo sed "s|^data_directory[[:blank:]]*=*[[:blank:]]*.*|data_directory = \x27$POSTGRESQL_DATA_DIR\x27|" -i $POSTGRESQL_CONF_PATH ||  sudo sed "$ adata_directory = \x27$POSTGRESQL_DATA_DIR\x27" -i $POSTGRESQL_CONF_PATH
-  su postgres -c "/usr/pgsql-10/bin/postgresql-10-setup initdb" -D $POSTGRESQL_DATA_DIR
-  sudo systemctl restart postgresql-10
+  if which psql >/dev/null; then 
+    echo "Postgresql is already intalled";
+  else
+      rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-contrib-10.17-1PGDG.rhel7.x86_64
+      rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-libs-10.17-1PGDG.rhel7.x86_64
+      rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql-libs-9.2.24-7.el7_9.x86_64
+      rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-server-10.17-1PGDG.rhel7.x86_64
+      rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-10.17-1PGDG.rhel7.x86_64
+  fi
+
+  
+  if [[ ! -f "$POSTGRESQL_DATA_DIR/PG_VERSION" ]]; then
+    chown -R postgres:postgres $POSTGRESQL_DIR
+    sudo grep -q "^data_directory[[:blank:]]*=*[[:blank:]]*"  $POSTGRESQL_CONF_PATH && sudo sed "s|^data_directory[[:blank:]]*=*[[:blank:]]*.*|data_directory = \x27$POSTGRESQL_DATA_DIR\x27|" -i $POSTGRESQL_CONF_PATH ||  sudo sed "$ adata_directory = \x27$POSTGRESQL_DATA_DIR\x27" -i $POSTGRESQL_CONF_PATH
+    su postgres -c "/usr/pgsql-10/bin/postgresql-10-setup initdb" -D $POSTGRESQL_DATA_DIR
+    sudo systemctl restart postgresql-10
+  fi
 fi
 
 
