--- a/zimbra/scripts/lib/install
+++ b/zimbra/scripts/lib/install
@@ -474,6 +474,8 @@ fi
 
 "$ZULIP_PATH"/scripts/lib/install-node
 
+
+
 # Generate /etc/zulip/zulip.conf .
 mkdir -p /etc/zulip
 has_class() {
@@ -603,11 +605,8 @@ if [ "$os_id" = centos ]; then
   if which psql >/dev/null; then 
     echo "Postgresql is already intalled";
   else
-      rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-contrib-10.17-1PGDG.rhel7.x86_64
-      rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-libs-10.17-1PGDG.rhel7.x86_64
-      rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql-libs-9.2.24-7.el7_9.x86_64
-      rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-server-10.17-1PGDG.rhel7.x86_64
-      rpm  -i --force "$ZULIP_PATH"/packages/sys-deps/postgresql10-10.17-1PGDG.rhel7.x86_64
+    sudo yum install -y https://download.postgresql.org/pub/repos/yum/reporpms/EL-7-x86_64/pgdg-redhat-repo-latest.noarch.rpm
+    sudo yum install postgresql10-server postgresql10 postgresql10-devel
   fi
 
   
